Fix CSS layout issues in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,34 @@
 * {
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
 .layout {
   display: flex;
+  flex-direction: column;
   min-height: 100vh;
-  overflow: hidden;
-  transform: rotate(1deg);
 }
 
 header {
   padding: 1em;
-  background-color: #fff;
+  background-color: #333;
   color: #fff;
 }
 
 main {
   flex: 1;
   padding: 1em;
-  display: list-item;
 }
 
 footer {
   padding: 1em;
-  text-align: right;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 9999;
-  background: red;
+  text-align: center;
+  background: #333;
+  color: #fff;
 }
 
 .cat-card {
   border: 1px solid #ddd;
   text-align: center;
-  height: 150px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
